--- a/assets/package.json
+++ b/assets/package.json
@@ -32,43 +32,43 @@
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.3",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.25.0",
-    "clean-webpack-plugin": "^0.1.17",
+    "clean-webpack-plugin": "^0.1.18",
     "cross-env": "^5.1.3",
-    "css-loader": "^0.28.8",
+    "css-loader": "^0.28.10",
     "cssnano": "^3.10.0",
-    "eslint": "^4.15.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint": "^4.18.1",
+    "eslint-config-standard": "^11.0.0",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^4.0.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^4.0.2",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "imports-loader": "^0.7.1",
-    "nodemon": "^1.14.10",
-    "postcss": "^6.0.16",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-loader": "^2.0.10",
+    "file-loader": "^1.1.11",
+    "imports-loader": "^0.8.0",
+    "nodemon": "^1.17.1",
+    "postcss": "^6.0.19",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^2.1.1",
     "postcss-pxtorem": "^4.0.1",
-    "progress-bar-webpack-plugin": "^1.10.0",
-    "style-loader": "^0.19.0",
+    "progress-bar-webpack-plugin": "^1.11.0",
+    "style-loader": "^0.20.2",
     "stylint": "^1.5.9",
-    "stylint-stylish": "^1.4.0",
-    "uglify-js": "^3.3.5",
-    "uglifyjs-webpack-plugin": "^1.1.6",
+    "stylint-stylish": "^1.4.1",
+    "uglify-js": "^3.3.12",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-php-manifest": "^0.0.4",
+    "webpack": "^3.11.0",
+    "webpack-php-manifest": "^0.0.5",
     "write-file-webpack-plugin": "^4.2.0"
   },
   "dependencies": {
