Update postcss config

--- a/assets/package.json
+++ b/assets/package.json
@@ -57,8 +57,8 @@
     "imports-loader": "^0.8.0",
     "nodemon": "^1.17.5",
     "postcss": "^6.0.22",
-    "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.5",
+    "postcss-preset-env": "^5.1.0",
     "postcss-pxtorem": "^4.0.1",
     "progress-bar-webpack-plugin": "^1.11.0",
     "style-loader": "^0.21.0",
